parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ERROR

Grammar

Rule 0     S' -> oracion
Rule 1     oracion -> sujeto predicado
Rule 2     oracion -> sujeto
Rule 3     oracion -> predicado
Rule 4     sujeto -> sintagma_nominal
Rule 5     sintagma_nominal -> determinante sustantivo
Rule 6     sintagma_nominal -> determinante sustantivo adjetivo
Rule 7     sintagma_nominal -> pronombre
Rule 8     sintagma_nominal -> nombre_propio
Rule 9     predicado -> verbo
Rule 10    predicado -> verbo complemento_directo
Rule 11    predicado -> verbo complemento_directo complemento_indirecto
Rule 12    predicado -> verbo complemento_directo adverbio
Rule 13    predicado -> verbo complemento_indirecto
Rule 14    predicado -> verbo adverbio
Rule 15    complemento_directo -> sintagma_nominal
Rule 16    complemento_indirecto -> PREPOSICION_A sintagma_nominal
Rule 17    determinante -> DETERMINANTE
Rule 18    sustantivo -> SUSTANTIVO
Rule 19    verbo -> VERBO
Rule 20    adjetivo -> ADJETIVO
Rule 21    pronombre -> PRONOMBRE
Rule 22    nombre_propio -> NOMBRE_PROPIO
Rule 23    adverbio -> ADVERBIO

Terminals, with rules where they appear

ADJETIVO             : 20
ADVERBIO             : 23
DETERMINANTE         : 17
ERROR                : 
NOMBRE_PROPIO        : 22
PREPOSICION_A        : 16
PRONOMBRE            : 21
SUSTANTIVO           : 18
VERBO                : 19
error                : 

Nonterminals, with rules where they appear

adjetivo             : 6
adverbio             : 12 14
complemento_directo  : 10 11 12
complemento_indirecto : 11 13
determinante         : 5 6
nombre_propio        : 8
oracion              : 0
predicado            : 1 3
pronombre            : 7
sintagma_nominal     : 4 15 16
sujeto               : 1 2
sustantivo           : 5 6
verbo                : 9 10 11 12 13 14

Parsing method: LALR

state 0

    (0) S' -> . oracion
    (1) oracion -> . sujeto predicado
    (2) oracion -> . sujeto
    (3) oracion -> . predicado
    (4) sujeto -> . sintagma_nominal
    (9) predicado -> . verbo
    (10) predicado -> . verbo complemento_directo
    (11) predicado -> . verbo complemento_directo complemento_indirecto
    (12) predicado -> . verbo complemento_directo adverbio
    (13) predicado -> . verbo complemento_indirecto
    (14) predicado -> . verbo adverbio
    (5) sintagma_nominal -> . determinante sustantivo
    (6) sintagma_nominal -> . determinante sustantivo adjetivo
    (7) sintagma_nominal -> . pronombre
    (8) sintagma_nominal -> . nombre_propio
    (19) verbo -> . VERBO
    (17) determinante -> . DETERMINANTE
    (21) pronombre -> . PRONOMBRE
    (22) nombre_propio -> . NOMBRE_PROPIO

    VERBO           shift and go to state 9
    DETERMINANTE    shift and go to state 10
    PRONOMBRE       shift and go to state 11
    NOMBRE_PROPIO   shift and go to state 12

    oracion                        shift and go to state 1
    sujeto                         shift and go to state 2
    predicado                      shift and go to state 3
    sintagma_nominal               shift and go to state 4
    verbo                          shift and go to state 5
    determinante                   shift and go to state 6
    pronombre                      shift and go to state 7
    nombre_propio                  shift and go to state 8

state 1

    (0) S' -> oracion .



state 2

    (1) oracion -> sujeto . predicado
    (2) oracion -> sujeto .
    (9) predicado -> . verbo
    (10) predicado -> . verbo complemento_directo
    (11) predicado -> . verbo complemento_directo complemento_indirecto
    (12) predicado -> . verbo complemento_directo adverbio
    (13) predicado -> . verbo complemento_indirecto
    (14) predicado -> . verbo adverbio
    (19) verbo -> . VERBO

    $end            reduce using rule 2 (oracion -> sujeto .)
    VERBO           shift and go to state 9

    predicado                      shift and go to state 13
    verbo                          shift and go to state 5

state 3

    (3) oracion -> predicado .

    $end            reduce using rule 3 (oracion -> predicado .)


state 4

    (4) sujeto -> sintagma_nominal .

    VERBO           reduce using rule 4 (sujeto -> sintagma_nominal .)
    $end            reduce using rule 4 (sujeto -> sintagma_nominal .)


state 5

    (9) predicado -> verbo .
    (10) predicado -> verbo . complemento_directo
    (11) predicado -> verbo . complemento_directo complemento_indirecto
    (12) predicado -> verbo . complemento_directo adverbio
    (13) predicado -> verbo . complemento_indirecto
    (14) predicado -> verbo . adverbio
    (15) complemento_directo -> . sintagma_nominal
    (16) complemento_indirecto -> . PREPOSICION_A sintagma_nominal
    (23) adverbio -> . ADVERBIO
    (5) sintagma_nominal -> . determinante sustantivo
    (6) sintagma_nominal -> . determinante sustantivo adjetivo
    (7) sintagma_nominal -> . pronombre
    (8) sintagma_nominal -> . nombre_propio
    (17) determinante -> . DETERMINANTE
    (21) pronombre -> . PRONOMBRE
    (22) nombre_propio -> . NOMBRE_PROPIO

    $end            reduce using rule 9 (predicado -> verbo .)
    PREPOSICION_A   shift and go to state 18
    ADVERBIO        shift and go to state 19
    DETERMINANTE    shift and go to state 10
    PRONOMBRE       shift and go to state 11
    NOMBRE_PROPIO   shift and go to state 12

    complemento_directo            shift and go to state 14
    complemento_indirecto          shift and go to state 15
    adverbio                       shift and go to state 16
    sintagma_nominal               shift and go to state 17
    determinante                   shift and go to state 6
    pronombre                      shift and go to state 7
    nombre_propio                  shift and go to state 8

state 6

    (5) sintagma_nominal -> determinante . sustantivo
    (6) sintagma_nominal -> determinante . sustantivo adjetivo
    (18) sustantivo -> . SUSTANTIVO

    SUSTANTIVO      shift and go to state 21

    sustantivo                     shift and go to state 20

state 7

    (7) sintagma_nominal -> pronombre .

    VERBO           reduce using rule 7 (sintagma_nominal -> pronombre .)
    $end            reduce using rule 7 (sintagma_nominal -> pronombre .)
    PREPOSICION_A   reduce using rule 7 (sintagma_nominal -> pronombre .)
    ADVERBIO        reduce using rule 7 (sintagma_nominal -> pronombre .)


state 8

    (8) sintagma_nominal -> nombre_propio .

    VERBO           reduce using rule 8 (sintagma_nominal -> nombre_propio .)
    $end            reduce using rule 8 (sintagma_nominal -> nombre_propio .)
    PREPOSICION_A   reduce using rule 8 (sintagma_nominal -> nombre_propio .)
    ADVERBIO        reduce using rule 8 (sintagma_nominal -> nombre_propio .)


state 9

    (19) verbo -> VERBO .

    PREPOSICION_A   reduce using rule 19 (verbo -> VERBO .)
    ADVERBIO        reduce using rule 19 (verbo -> VERBO .)
    DETERMINANTE    reduce using rule 19 (verbo -> VERBO .)
    PRONOMBRE       reduce using rule 19 (verbo -> VERBO .)
    NOMBRE_PROPIO   reduce using rule 19 (verbo -> VERBO .)
    $end            reduce using rule 19 (verbo -> VERBO .)


state 10

    (17) determinante -> DETERMINANTE .

    SUSTANTIVO      reduce using rule 17 (determinante -> DETERMINANTE .)


state 11

    (21) pronombre -> PRONOMBRE .

    VERBO           reduce using rule 21 (pronombre -> PRONOMBRE .)
    $end            reduce using rule 21 (pronombre -> PRONOMBRE .)
    PREPOSICION_A   reduce using rule 21 (pronombre -> PRONOMBRE .)
    ADVERBIO        reduce using rule 21 (pronombre -> PRONOMBRE .)


state 12

    (22) nombre_propio -> NOMBRE_PROPIO .

    VERBO           reduce using rule 22 (nombre_propio -> NOMBRE_PROPIO .)
    $end            reduce using rule 22 (nombre_propio -> NOMBRE_PROPIO .)
    PREPOSICION_A   reduce using rule 22 (nombre_propio -> NOMBRE_PROPIO .)
    ADVERBIO        reduce using rule 22 (nombre_propio -> NOMBRE_PROPIO .)


state 13

    (1) oracion -> sujeto predicado .

    $end            reduce using rule 1 (oracion -> sujeto predicado .)


state 14

    (10) predicado -> verbo complemento_directo .
    (11) predicado -> verbo complemento_directo . complemento_indirecto
    (12) predicado -> verbo complemento_directo . adverbio
    (16) complemento_indirecto -> . PREPOSICION_A sintagma_nominal
    (23) adverbio -> . ADVERBIO

    $end            reduce using rule 10 (predicado -> verbo complemento_directo .)
    PREPOSICION_A   shift and go to state 18
    ADVERBIO        shift and go to state 19

    complemento_indirecto          shift and go to state 22
    adverbio                       shift and go to state 23

state 15

    (13) predicado -> verbo complemento_indirecto .

    $end            reduce using rule 13 (predicado -> verbo complemento_indirecto .)


state 16

    (14) predicado -> verbo adverbio .

    $end            reduce using rule 14 (predicado -> verbo adverbio .)


state 17

    (15) complemento_directo -> sintagma_nominal .

    PREPOSICION_A   reduce using rule 15 (complemento_directo -> sintagma_nominal .)
    ADVERBIO        reduce using rule 15 (complemento_directo -> sintagma_nominal .)
    $end            reduce using rule 15 (complemento_directo -> sintagma_nominal .)


state 18

    (16) complemento_indirecto -> PREPOSICION_A . sintagma_nominal
    (5) sintagma_nominal -> . determinante sustantivo
    (6) sintagma_nominal -> . determinante sustantivo adjetivo
    (7) sintagma_nominal -> . pronombre
    (8) sintagma_nominal -> . nombre_propio
    (17) determinante -> . DETERMINANTE
    (21) pronombre -> . PRONOMBRE
    (22) nombre_propio -> . NOMBRE_PROPIO

    DETERMINANTE    shift and go to state 10
    PRONOMBRE       shift and go to state 11
    NOMBRE_PROPIO   shift and go to state 12

    sintagma_nominal               shift and go to state 24
    determinante                   shift and go to state 6
    pronombre                      shift and go to state 7
    nombre_propio                  shift and go to state 8

state 19

    (23) adverbio -> ADVERBIO .

    $end            reduce using rule 23 (adverbio -> ADVERBIO .)


state 20

    (5) sintagma_nominal -> determinante sustantivo .
    (6) sintagma_nominal -> determinante sustantivo . adjetivo
    (20) adjetivo -> . ADJETIVO

    VERBO           reduce using rule 5 (sintagma_nominal -> determinante sustantivo .)
    $end            reduce using rule 5 (sintagma_nominal -> determinante sustantivo .)
    PREPOSICION_A   reduce using rule 5 (sintagma_nominal -> determinante sustantivo .)
    ADVERBIO        reduce using rule 5 (sintagma_nominal -> determinante sustantivo .)
    ADJETIVO        shift and go to state 26

    adjetivo                       shift and go to state 25

state 21

    (18) sustantivo -> SUSTANTIVO .

    ADJETIVO        reduce using rule 18 (sustantivo -> SUSTANTIVO .)
    VERBO           reduce using rule 18 (sustantivo -> SUSTANTIVO .)
    $end            reduce using rule 18 (sustantivo -> SUSTANTIVO .)
    PREPOSICION_A   reduce using rule 18 (sustantivo -> SUSTANTIVO .)
    ADVERBIO        reduce using rule 18 (sustantivo -> SUSTANTIVO .)


state 22

    (11) predicado -> verbo complemento_directo complemento_indirecto .

    $end            reduce using rule 11 (predicado -> verbo complemento_directo complemento_indirecto .)


state 23

    (12) predicado -> verbo complemento_directo adverbio .

    $end            reduce using rule 12 (predicado -> verbo complemento_directo adverbio .)


state 24

    (16) complemento_indirecto -> PREPOSICION_A sintagma_nominal .

    $end            reduce using rule 16 (complemento_indirecto -> PREPOSICION_A sintagma_nominal .)


state 25

    (6) sintagma_nominal -> determinante sustantivo adjetivo .

    VERBO           reduce using rule 6 (sintagma_nominal -> determinante sustantivo adjetivo .)
    $end            reduce using rule 6 (sintagma_nominal -> determinante sustantivo adjetivo .)
    PREPOSICION_A   reduce using rule 6 (sintagma_nominal -> determinante sustantivo adjetivo .)
    ADVERBIO        reduce using rule 6 (sintagma_nominal -> determinante sustantivo adjetivo .)


state 26

    (20) adjetivo -> ADJETIVO .

    VERBO           reduce using rule 20 (adjetivo -> ADJETIVO .)
    $end            reduce using rule 20 (adjetivo -> ADJETIVO .)
    PREPOSICION_A   reduce using rule 20 (adjetivo -> ADJETIVO .)
    ADVERBIO        reduce using rule 20 (adjetivo -> ADJETIVO .)

